wip: create Date/Time and Identity (On/By) Meta Fields article

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -39,60 +39,7 @@ Revision-specific fields contain the `revision` prefix in their name, and, as th
 
 On the other hand, entry-specific fields do not contain any prefix, and contain entry-level information. For example, the `createdOn` meta field contains the date/time when an entry was initially created. The value of this field will not change even if the entry is updated or new revisions are created.
 
-[//]: # ()
-[//]: # (| Field                      | Description                                                                           |)
-
-[//]: # (| -------------------------- | ------------------------------------------------------------------------------------- |)
-
-[//]: # (| `createdOn`                | The date/time when an entry revision was created.                                     |)
-
-[//]: # (| `modifiedOn`               | NEW The date/time when an entry revision was created.                                 |)
-
-[//]: # (| `savedOn`                  | The date/time when an entry revision was last saved.                                  |)
-
-[//]: # (| `publishedOn`              | DELETED The date/time when an entry revision was published.                           |)
-
-[//]: # (| `firstPublishedOn`         | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `lastPublishedOn`          | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `createdBy`                | The identity of the user who created an entry revision.                               |)
-
-[//]: # (| `ownedBy`                  | DELETED The identity of the user who owns the entry &#40;who created the first revision&#41;. |)
-
-[//]: # (| `modifiedBy`               | The identity of the user who last modified an entry revision.                         |)
-
-[//]: # (| `firstPublishedBy`         | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `lastPublishedBy`          | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `revisionCreatedOn`        | The date/time when an entry revision was created.                                     |)
-
-[//]: # (| `revisionModifiedOn`       | NEW The date/time when an entry revision was created.                                 |)
-
-[//]: # (| `revisionSavedOn`          | The date/time when an entry revision was last saved.                                  |)
-
-[//]: # (| `revisionFirstPublishedOn` | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `revisionLastPublishedOn`  | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `revisionCreatedBy`        | The identity of the user who created an entry revision.                               |)
-
-[//]: # (| `revisionModifiedBy`       | The identity of the user who last modified an entry revision.                         |)
-
-[//]: # (| `revisionSavedBy`          | The identity of the user who last modified an entry revision.                         |)
-
-[//]: # (| `revisionFirstPublishedBy` | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # (| `revisionLastPublishedBy`  | NEW The identity of the user who last modified an entry revision.                     |)
-
-[//]: # ()
-[//]: # (In total, we're introducing 20 new meta fields, where 10 are revision-specific, and 10 are entry-specific.)
-
-[//]: # ()
-[//]: # (For example, users can now use the `revisionCreatedOn` meta field to display the date/time when a revision was initially created. And they can use the `entryCreatedOn` meta field to display the date/time when an entry was initially created.)
-
-For the full list of new meta fields and additional information, please refer to the new [Meta Fields](/docs/tutorials/headless-cms/meta-fields) article.
+For the full list of new meta fields and additional information, please refer to the new [Date/Time and Identity (On/By) Meta Fields](/docs/headless-cms/references/date-time-and-identity-meta-fields) reference article.
 
 #### A Note On Backwards Compatibility
 
@@ -100,7 +47,7 @@ In order to introduce these improvements, we also had to introduce a couple of b
 
 Also, note that this release includes a data migration that will automatically migrate all existing content entries to use the new meta fields. The migration is run automatically after the **API** project application is deployed.
 
-For more information on all of these topics, be sure to check out the [Upgrade Guide](/docs/release-notes/5.39.0/upgrade-guide) section and, more importantly, the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-id-meta-fields) article.
+For more information on all of these topics, be sure to check out the [Upgrade Guide](/docs/release-notes/5.39.0/upgrade-guide) section and, more importantly, the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-identity-meta-fields) upgrade guide.
 
 ## Deployments
 
