--- a/docs/release-notes/5.39.0/date-time-and-identity-meta-fields.mdx
+++ b/docs/release-notes/5.39.0/date-time-and-identity-meta-fields.mdx
@@ -1,7 +1,7 @@
 ---
 id: 724fa9d7
 title: Date/Time and Identity (On/By) Meta Fields
-description: Learn how to upgrade Webiny from 5.37.x to 5.39.0.
+description: Learn about the new date/time and identity-related meta fields, and how to handle the breaking changes.
 ---
 
 ## Introduction
@@ -15,12 +15,12 @@ Will these breaking changes affect you? It depends on if you've been adding cust
 1. custom Headless CMS-related GraphQL API queries or mutations
 2. custom Headless CMS-related JavaScript (TypeScript) code (for example, [lifecycle events](/docs/headless-cms/references/lifecycle-events))
 
-If you don't have any of the above, you can safely skip this section. Otherwise, please read on.
+If you don't have any of the above, you can safely skip this article. Otherwise, please read on.
 
 <Alert type={"info"}>
   To learn more about the new date/time and identity-related meta fields, please refer to the{" "}
-  <a href={"/docs/guides/headless-cms/working-with-date-time-and-identity-meta-fields"}>
-    Working with Date/Time and Identity (On/By) Meta Fields
+  <a href={"/docs/headless-cms/references/date-time-and-identity-meta-fields"}>
+    Entry Date/Time and Identity (On/By) Meta Fields
   </a>{" "}
   guide.
 </Alert>
