wip: add "Deployments - New IAM Permissions (Allowed Actions) Required" updates

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -1,14 +1,14 @@
 ---
 id: 268cc9e6
 title: Webiny 5.39.0 Changelog
-description: See what's new in Webiny version 5.39.0.
+description: January 16, 2024
 ---
 
 import { GithubRelease } from "@/components/GithubRelease";
 
 <GithubRelease version={"5.39.0"} />
 
-## Breaking Changes
+## Breaking Changes❗
 
 ### Headless CMS - Revamped Date/Time and Identity (On/By) Meta Fields
 
@@ -41,13 +41,21 @@ On the other hand, entry-specific fields do not contain any prefix, and contain 
 
 For the full list of new meta fields and additional information, please refer to the new [Date/Time and Identity (On/By) Meta Fields](/docs/headless-cms/references/date-time-and-identity-meta-fields) reference article.
 
-#### A Note On Backwards Compatibility
+#### Backwards Compatibility
 
 In order to introduce these improvements, we also had to introduce a couple of breaking changes. For example, because they're no longer needed, we've removed the `publishedOn` and `ownedBy` content entry fields. So, if you're using these fields in your project, you'll need to update your code accordingly.
 
 Also, note that this release includes a data migration that will automatically migrate all existing content entries to use the new meta fields. The migration is run automatically after the **API** project application is deployed.
 
 For more information on all of these topics, be sure to check out the [Upgrade Guide](/docs/release-notes/5.39.0/upgrade-guide) section and, more importantly, the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-identity-meta-fields) upgrade guide.
+
+### Deployments - New IAM Permissions (Allowed Actions) Required
+
+Starting with this release, when deploying Webiny, an [AWS Step Functions](https://aws.amazon.com/step-functions/) state machine will also be created in the process.
+
+And despite the fact that, at the moment, the state machine is only utilized internally, this still means that, in order to deploy Webiny successfully, proper [AWS Identity and Access Management (IAM)](https://aws.amazon.com/iam/) permissions (allowed actions) need to be in place.
+
+For additional information, please refer to the [Deployments - New IAM Permissions (Allowed Actions) Required](/docs/release-notes/5.39.0/deployments-new-iam-permissions-required) upgrade guide.
 
 ## Deployments
 
