--- a/docs/release-notes/5.39.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.0/upgrade-guide.mdx
@@ -40,9 +40,9 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
-### 3. Handling Breaking Changes
+### 3. Breaking Changes
 
-#### 3.1 Date/Time and Identity (On/By) Meta Fields
+#### 3.1 Headless CMS - Date/Time and Identity (On/By) Meta Fields
 
 As mentioned in the [changelog](docs/release-notes/5.39.0/changelog#headless-cms-revamped-date-time-and-identity-on-by-meta-fields), with this release, we’ve revamped the date/time and identity-related meta fields. In order to do this, we had to introduce a couple of Headless CMS-related breaking changes.
 
@@ -52,6 +52,10 @@ Will these breaking changes affect you? It depends on if you've been adding cust
 2. custom Headless CMS-related JavaScript (TypeScript) code (for example, [lifecycle events](/docs/headless-cms/references/lifecycle-events))
 
 If you don't have any of the above, you can safely skip this section. Otherwise, please take a look at the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-id-meta-fields) article.
+
+#### 3.2 Deployments - New IAM Permissions (Allowed Actions) Required
+
+✍️
 
 ### 4. Deploy Your Project
 
