feat: add "Deployments - New IAM Permissions (Allowed Actions) Required" updates

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -49,13 +49,13 @@ Also, note that this release includes a data migration that will automatically m
 
 For more information on all of these topics, be sure to check out the [Upgrade Guide](/docs/release-notes/5.39.0/upgrade-guide) section and, more importantly, the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-identity-meta-fields) upgrade guide.
 
-### Deployments - New IAM Permissions (Allowed Actions) Required
+### Deployments - New IAM Permissions Requirements
 
 Starting with this release, when deploying Webiny, an [AWS Step Functions](https://aws.amazon.com/step-functions/) state machine will also be created in the process.
 
 And despite the fact that, at the moment, the state machine is only utilized internally, this still means that, in order to deploy Webiny successfully, proper [AWS Identity and Access Management (IAM)](https://aws.amazon.com/iam/) permissions (allowed actions) need to be in place.
 
-For additional information, please refer to the [Deployments - New IAM Permissions (Allowed Actions) Required](/docs/release-notes/5.39.0/deployments-new-iam-permissions-required) upgrade guide.
+For additional information, please refer to the [Deployments - New IAM Permissions Requirements](/docs/release-notes/5.39.0/upgrade-guide#3-2-deployments-new-iam-permissions-requirements) upgrade guide.
 
 ## Deployments
 
