--- a/docs/release-notes/5.39.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.0/upgrade-guide.mdx
@@ -6,6 +6,7 @@ description: Learn how to upgrade Webiny from 5.37.x to 5.39.0.
 
 import { Alert } from "@/components/Alert";
 import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
+import iamUserGroupsSearch from "./assets/iam-user-groups-search.png";
 
 <Alert type="success" title="What you’ll learn">
 
@@ -40,7 +41,7 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
-### 3. Breaking Changes
+### 3. Breaking Changes❗
 
 #### 3.1 Headless CMS - Date/Time and Identity (On/By) Meta Fields
 
@@ -53,9 +54,41 @@ Will these breaking changes affect you? It depends on if you've been adding cust
 
 If you don't have any of the above, you can safely skip this section. Otherwise, please take a look at the [Date/Time and Identity (On/By) Meta Fields](/docs/release-notes/5.39.0/date-time-and-id-meta-fields) article.
 
-#### 3.2 Deployments - New IAM Permissions (Allowed Actions) Required
+#### 3.2 Deployments - New IAM Permissions Requirements
 
-✍️
+As mentioned in the [changelog](/docs/release-notes/5.39.0/changelog#deployments-new-iam-permissions-requirements), starting with this release, when deploying Webiny, an [AWS Step Functions](https://aws.amazon.com/step-functions/) state machine will also be created in the process.
+
+And despite the fact that, at the moment, the state machine is only utilized internally, this still means that, in order to deploy Webiny successfully, proper [AWS Identity and Access Management (IAM)](https://aws.amazon.com/iam/) permissions need to be in place.
+
+For new users, this is not an issue because we've updated our [Deploy Webiny Project AWS CloudFormation template](/docs/infrastructure/aws/configure-aws-credentials#and-quot-deploy-webiny-project-and-quot-aws-cloud-formation-template) to include the required permissions. However, for existing users, this means that, in order to deploy Webiny successfully, they'll need to update the permissions attached to the IAM user or role they're using to deploy Webiny.
+
+Ultimately, no matter if you're using the mentioned AWS CloudFormation template or not, the following additional permissions need to be attached to the IAM user or role you're using to deploy Webiny:
+
+```yaml
+# AWS Step Functions
+- Effect: Allow
+  Action:
+  - states:CreateStateMachine
+  - states:DeleteStateMachine
+  - states:DescribeStateMachine
+  - states:ListTagsForResource
+  - states:TagResource
+  - states:UntagResource
+  - states:ListStateMachines
+  - states:UpdateStateMachine
+  
+  # Be careful about the wby-* resource name. If you're using a custom Pulumi 
+  # resource name prefix, you'll need to update this accordingly. For more 
+  # information on custom Pulumi resource name prefixes, see:
+  # https://www.webiny.com/docs/infrastructure/basics/modify-cloud-infrastructure#retrieving-the-deployment-environment
+  Resource: arn:aws:states:*:*:stateMachine:wby-*
+```
+
+If you're using the AWS CloudFormation template, you can add these to the deployed [`DeployWebinyProjectGroup2` IAM group](https://github.com/webiny/webiny-js/blob/next/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml#L255-L266), simply via the [AWS Console](https://us-east-1.console.aws.amazon.com/iam/home#/groups):
+
+<Image src={iamUserGroupsSearch} alt="Search for the DeployWebinyProjectGroup2 IAM group" />
+
+Once you've added the above permissions, you can proceed with the next step, which is redeploying your Webiny project.
 
 ### 4. Deploy Your Project
 
