--- a/docs/release-notes/5.39.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.0/upgrade-guide.mdx
@@ -47,7 +47,7 @@ yarn webiny upgrade
 
 As mentioned in the [changelog](docs/release-notes/5.39.0/changelog#headless-cms-revamped-date-time-and-identity-on-by-meta-fields), with this release, we’ve revamped the date/time and identity-related meta fields. In order to do this, we had to introduce a couple of Headless CMS-related breaking changes.
 
-Will these breaking changes affect you? It depends on if you've been adding custom code in your project, in which you are also relying on the existing content entry meta fields, like `ownedBy`, `publishedOn`, or `createdOn`. For example, you may have have been using these in your: 
+Will these breaking changes affect you? It depends on if you've been adding custom code in your project, in which you are also relying on the existing content entry meta fields, like `ownedBy`, `publishedOn`, or `createdOn`. For example, you may have have been using these in your:
 
 1. custom Headless CMS-related GraphQL API queries or mutations
 2. custom Headless CMS-related JavaScript (TypeScript) code (for example, [lifecycle events](/docs/headless-cms/references/lifecycle-events))
@@ -68,21 +68,29 @@ Ultimately, no matter if you're using the mentioned AWS CloudFormation template 
 # AWS Step Functions
 - Effect: Allow
   Action:
-  - states:CreateStateMachine
-  - states:DeleteStateMachine
-  - states:DescribeStateMachine
-  - states:ListTagsForResource
-  - states:TagResource
-  - states:UntagResource
-  - states:ListStateMachines
-  - states:UpdateStateMachine
-  
-  # Be careful about the wby-* resource name. If you're using a custom Pulumi 
-  # resource name prefix, you'll need to update this accordingly. For more 
-  # information on custom Pulumi resource name prefixes, see:
-  # https://www.webiny.com/docs/infrastructure/basics/modify-cloud-infrastructure#retrieving-the-deployment-environment
+    - states:CreateStateMachine
+    - states:DeleteStateMachine
+    - states:DescribeStateMachine
+    - states:ListTagsForResource
+    - states:TagResource
+    - states:UntagResource
+    - states:ListStateMachines
+    - states:UpdateStateMachine
+
   Resource: arn:aws:states:*:*:stateMachine:wby-*
 ```
+
+<Alert type={'warning'} title={'Important'}>
+
+Be careful with the `arn:aws:states:*:*:stateMachine:wby-*` resource and the last `wby-*` part. If you're using a
+custom Pulumi resource name prefix (set via `webiny.application.ts` files), you'll need to update this accordingly.
+
+For example, if you're using `my-123-prefix-` as your custom Pulumi resource name prefix, then the resource should be
+`arn:aws:states:*:*:stateMachine:wby-123-prefix-*`.
+
+For more information on custom Pulumi resource name prefixes, see [Pulumi Resource Name Prefixes](/docs/infrastructure/basics/modify-cloud-infrastructure#pulumi-resource-name-prefixes).
+
+</Alert>
 
 If you're using the AWS CloudFormation template, you can add these to the deployed [`DeployWebinyProjectGroup2` IAM group](https://github.com/webiny/webiny-js/blob/next/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml#L255-L266), simply via the [AWS Console](https://us-east-1.console.aws.amazon.com/iam/home#/groups):
 
