docs: change paragraph title

--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
@@ -163,7 +163,7 @@ You can enable sorting by setting the `sortable` property, so users can sort the
 
 <Image src={hcmsSortableColumn} title="Define a sortable column" />
 
-### Customize column size
+### Custom column size
 To set the initial size of a column, you can use the `size` property. By default, the size is set to `100`.
 
 However, this is not a value in pixels but more of a proportion with the other columns within the table. If you want to double the size of a specific column, you can pass `200` as the value.
