--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
@@ -24,7 +24,7 @@ This feature has been available since Webiny **v5.39.0**.
 
 - how to add a column
 - how to discover existing column names
-- how to change the position, remove, or replace an column
+- how to change the position, remove, or replace a column
 
 </Alert>
 
@@ -70,9 +70,9 @@ export const App: React.FC = () => {
 
 The code examples below are based on a content model called `Property` with the following fields:
 
-- `title` text input;
-- `price` number input;
-- `currency` text input with [ISO 4217 currency codes](https://en.wikipedia.org/wiki/ISO_4217#List_of_ISO_4217_currency_codes) predefined values.
+- `title` text input
+- `price` number input
+- `currency` text input with [ISO 4217 currency codes](https://en.wikipedia.org/wiki/ISO_4217#List_of_ISO_4217_currency_codes) predefined values
 
 </Alert>
 
@@ -85,8 +85,8 @@ To add a new column, use the `Browser.Column` component and mount it within your
 Here is an example of creating a column to show the `price` field data within the table. 
 The `Browser.Column` component receives the following mandatory props:
 
-- `name` used to target the field you want to show and serves as a unique identifier;
-- `header` used for formatting the column header.
+- `name` used to target the field you want to show and serves as a unique identifier
+- `header` used for formatting the column header
 
 ```tsx
 <ContentEntryListConfig>
