fix: fields list

--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
@@ -32,11 +32,11 @@ This feature has been available since Webiny **v5.39.0**.
 
 The Entry List Table is a UI component that displays entries for a specific CMS model. By default, the table shows pre-defined columns such as:
 
-- Name: presenting `title` field data
-- Author: presenting`createdBy` field
-- Created: presenting `createdOn` field
-- Modified: presenting `savedOn` field
-- Status: presenting `status` + `version` fields
+- **Name**: presenting the `title` field data
+- **Author**: presenting the `createdBy` field
+- **Created**: presenting the `createdOn` field
+- **Modified**: presenting the `savedOn` field
+- **Status**: presenting the `status` and `version` fields
 
 <Image src={hcmsDefaultTable} title="Default table columns" />
 
