feat: add HCMS actions article

--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-table-columns.mdx
@@ -237,7 +237,7 @@ You can easily add custom CSS class names to columns using the `className` prope
 
 This section demonstrates how you can discover the names of existing columns. This is important for further sections on positioning, removing, and replacing columns.
 
-The easiest way to discover existing columns is to use your browser's React Dev Tools plugins, select at least one entry and look for the `BaseColumns` props:
+The easiest way to discover existing columns is to use your browser's React Dev Tools plugins and search for the `BaseColumns`:
 
 <Image src={hcmsDiscoverColumn} title="Discover existing columns" />
 
