chore: fix typo

--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-actions.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-actions.mdx
@@ -172,7 +172,7 @@ To add a new action, use the `Browser.EntryAction` component and mount it within
 To ensure consistency in the UI, developers can use two components that inherit rules and guidelines from the Webiny core package:
 
 - `OptionsMenuItem`: triggers a defined action
-- `OptionMenuLink`: takes the user to a new location, such as a new web page
+- `OptionsMenuLink`: takes the user to a new location, such as a new web page
 
 Here is an example of creating an entry action component that copies the selected entry to the clipboard in JSON format.
 
