feat: create 5.38.4 release notes

--- a/docs/release-notes/5.38.4/changelog.mdx
+++ b/docs/release-notes/5.38.4/changelog.mdx
@@ -8,7 +8,7 @@ description: See what's new in Webiny version 5.38.4.
 
 ## Admin Area
 
-### Fixed an Issue with Loading 
+### Non-Full-Access Users Can Now Successfully Open the Admin App 
 
 We've addressed an issue where a non-full-access user would not be able to open the Admin app. 
 
