docs: describe FM actions API

--- a/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-actions.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/customize-entry-list-actions.mdx
@@ -229,7 +229,7 @@ The easiest way to discover existing entry actions is to use your browser's Reac
 
 ### Position an Entry Action
 
-To position your custom folder action before or after an existing action, you can use the `before` and `after` props on the `<Browser.EntryAction>` element:
+To position your custom entry action before or after an existing action, you can use the `before` and `after` props on the `<Browser.EntryAction>` element:
 
 ```tsx
 <ContentEntryListConfig>
