docs: add Table Customization APIs paragraph

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -6,6 +6,8 @@ description: January 16, 2024
 
 import { GithubRelease } from "@/components/GithubRelease";
 
+import hcmsDefaultTable from "./assets/hcms-default-table.png";
+
 <GithubRelease version={"5.39.0"} />
 
 ## Breaking Changes❗
@@ -98,6 +100,16 @@ From now on, for all AWS events we support, you can use the `createHandler` func
 Of course, you can still use the old way of importing specific `createHandler` (s3, dynamodb, etc...) - we will not remove those.
 
 To find out more about the Handlers, please read [this](/docs/core-development-concepts/basics/routes-and-events) article.
+
+## Admin
+
+### Introducing Table Customization APIs ([#3756](https://github.com/webiny/webiny-js/pull/3756) [#3721](https://github.com/webiny/webiny-js/pull/3721) [#3785](https://github.com/webiny/webiny-js/pull/3785))
+
+In this latest release, we have introduced powerful APIs that allow developers to customize the tables used by our suite of applications, such as Headless CMS, Page Builder, and File Manager.
+
+Using these APIs, developers can now easily add new columns, replace existing ones, remove them, or reposition them as per their requirements. Additionally, they can also add, replace, remove, or reposition entries and folder actions.
+
+<Image src={hcmsDefaultTable} alt="Headless CMS - Table Columns and Actions" />
 
 ## Other
 
