--- a/docs/release-notes/5.38.5/changelog.mdx
+++ b/docs/release-notes/5.38.5/changelog.mdx
@@ -22,8 +22,12 @@ This issue has now been fixed, and the pages should be shown correctly.
 
 ### Replaced JsonPack with GZIP For Page Content Compression ([#3839](https://github.com/webiny/webiny-js/pull/3839))
 
-When pages created with Webiny's Page Builder application are stored in the database, the page content data is compressed to reduce the size of the data. Prior to this release, we were using [JsonPack](https://www.npmjs.com/package/jsonpack) for this purpose. With this release, we've replaced JsonPack with [GZIP](https://www.npmjs.com/package/gzip-js).
+Upon storing to the database, in order to bypass potential database size limitations, the actual page content is always compressed. Prior to this release, we were using [JsonPack](https://www.npmjs.com/package/jsonpack) for this purpose. With this release, we've replaced JsonPack with [GZIP](https://www.npmjs.com/package/gzip-js).
 
-This change was made because, in some cases, the page content data was still too large to be stored in the database. This was especially true for pages that contained a lot of content.
+This change was made because, in some cases, the page content was still too large to be stored in the database. This was especially true for very large pages.
 
-With this change, the page builder data is now reduced by an extra 20-80%, depending on the size of the content JSON. Most importantly, this change further reduces the chances of the page content data being too large to be stored in the database.
+With this change, the page content is now reduced by an extra 20-80%, depending on its original size. Most importantly, this change further reduces the chances of the content being too large to be stored in the database.
+
+#### Backwards Compatibility
+
+Note that no extra changes are required on your end. The page content data is automatically converted to the new format when pages are saved.
